# variant-triage

./: .env.example  CLINICAL_DISCLAIMER.md  Dockerfile  OVERVIEW.md  README.md  SECURITY_CONSIDERATIONS.md  TUTORIAL.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 52820b4a242e_add_user_model.py
app/api/: deps.py  main.py
app/api/auth/: router.py  schemas.py  service.py
app/api/middleware/: audit.py
app/api/variants/: router.py  schemas.py  service.py
app/classification/: assembler.py  base.py
app/classification/evidence/: __init__.py  clinvar.py  gnomad.py
app/classification/rules/: __init__.py  pm1.py  pm2_ba1.py  pm4.py  pp2_pp3_bp4.py  ps1_pm5.py  pvs1.py
app/classification/somatic/: assembler.py  base.py
app/classification/somatic/evidence/: __init__.py  civic.py  oncokb.py
app/core/: config.py  logging.py
app/db/: models.py  session.py
app/domain/: enums.py  variant.py
app/ingestion/: vcf_parser.py
app/interpretation/: assistant.py  guardrails.py  prompts.py  schemas.py
nextflow/: README.md  main.nf  nextflow.config
nextflow/modules/: annotate.nf  normalize.nf
tests/: test_acmg_engine.py  test_acmg_rules.py  test_api.py  test_domain_models.py  test_interpretation.py  test_somatic_classifier.py  test_vcf_parser.py
tests/fixtures/: germline_snv.vcf  mock_evidence.py  mock_somatic_evidence.py  somatic_longread.vcf
